forms and input elements completed

--- a/htmlElements/formsAndInput/button.html
+++ b/htmlElements/formsAndInput/button.html
@@ -12,15 +12,17 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Button - &lt;button&gt;</h1>
+    <p>The button tag defines a clickable button!</p>
+    <p>Inside the button element you can put text and other tags like the strong, br and img tags.(It is not possible to do so with the button created with the input element!)</p>
+    <p>Always specify the type attribute to tell browsers the use of the button.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <button type="button">Click Me!</button>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/buttonExample.png">
 
     <br>
 
@@ -30,6 +32,17 @@
     <br>
 
     <h2>Attributes:</h2>
+    <p>autofocus - Specifies that a button should automatically get focus when the page loads</p>
+    <p>disabled - Specifies that a button should be disabled</p>
+    <p>form - Specifies which form the button belongs to</p>
+    <p>formaction - Specifies where to send the form-data when a form is submitted. Only for type="submit"</p>
+    <p>formenctype - Specifies how form-data should be encoded before sending it to a server. Only for type="submit"</p>
+    <p>formmethod - Specifies how to send the form-data (which HTTP method to use). Only for type="submit"</p>
+    <p>formnovalidate - Specifies that the form-data should not be validated on submission. Only for type="submit"</p>
+    <p>formtarget - Specifies where to display the response after submitting the form. Only for type="submit"</p>
+    <p>name - 	Specifies a name for the button</p>
+    <p>type - Specifies the type of button</p>
+    <p>value - 	Specifies an initial value for the button</p>
     <p>The global attributes are supported. 
         <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
     </p>
