--- a/htmlElements/formsAndInput/textArea.html
+++ b/htmlElements/formsAndInput/textArea.html
@@ -12,25 +12,45 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Text Area - &lt;textarea&gt;</h1>
+    <p>This element defines multi-line text input control. It is often used in a form to collect user inputs like comments or reviews.</p>
+    <p>A text area can hold an unlimited number of characters and the text renders in a fixed width font.</p>
+    <p>The size of the text area is specified by the cols and rows atttributes.</p>
+    <p>The name attribute is needed to reference the form data after the form is submitted. Without it no data will be submitted on the form.</p>
+    <p>The id attribute is needed to associate the text area with a label</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <textarea id="textarea" name="textarea" rows="8" cols="50">This is a text area with 8 rows and 50 columns.</textarea>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/textAreaExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <p>autofocus - Specifies that a text area should automatically get focus when the page loads</p>
+    <p>cols - Specifies the visible width of a text area</p>
+    <p>dirname - Specifies that the text direction of the textarea will be submitted</p>
+    <p>disabled - Specifies that a text area should be disabled</p>
+    <p>form - 	Specifies which form the text area belongs to</p>
+    <p>maxlength - Specifies the maximum number of characters allowed in the text area</p>
+    <p>name - Specifies a name for a text area</p>
+    <p>placeholder - Specifies a short hint that describes the expected value of a text area</p>
+    <p>readonly - Specifies that a text area should be read-only</p>
+    <p>required - Specifies that a text area is required/must be filled out</p>
+    <p>rows - Specifies the visible number of lines in a text area</p>
+    <p>wrap - Specifies how the text in a text area is to be wrapped when submitted in a form</p>
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
