--- a/htmlElements/formsAndInput/fieldSet.html
+++ b/htmlElements/formsAndInput/fieldSet.html
@@ -12,25 +12,48 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>FieldSet - &lt;fieldset&gt;</h1>
+    <p>This element is used to group related elements in a form</p>
+    <p>The fieldset tag draws a box around related elements.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <form action="">
+        <fieldset>
+          <legend>Personalia:</legend>
+          <label for="fname">First name:</label>
+          <input type="text" id="fname" name="fname"><br><br>
+          <label for="lname">Last name:</label>
+          <input type="text" id="lname" name="lname"><br><br>      
+        </fieldset>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email"><br><br>
+        <label for="birthday">Birthday:</label>
+        <input type="date" id="birthday" name="birthday"><br><br>
+        <input type="submit" value="Submit">
+      </form>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/fieldSetExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/fieldSetDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>disabled - Specifies that a group of related form elements should be disabled</p>
+    <p>form - Specifies which form the fieldset belongs to</p>
+    <p>name - Specifies a name for the fieldset</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
