--- a/htmlElements/formsAndInput/output.html
+++ b/htmlElements/formsAndInput/output.html
@@ -12,25 +12,38 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Output - &lt;output&gt;</h1>
+    <p>This element is used to represent the result of a calculation within the form. A script would do this calculation then insert it into the output element.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <form oninput="x.value=parseInt(a.value)+parseInt(b.value)">
+
+        <sup>0</sup><input type="range" id="a" max="75" value="0"><sup>75</sup>
+        +<input type="number" id="b" value="25">
+        =<output name="x" for="a b"></output>
+    </form>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/outputExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/outputDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>for - Specifies the relationship between the result of the calculation, and the elements used in the calculation</p>
+    <p>form - Specifies which form the output element belongs to</p>
+    <p>name - Specifies a name for the output element</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
